change customer status API created
